# learn-qt-move

./: README.md  pyproject.toml
learn_qt_move/: LogTable.py  MoveButtons.py  MoveGridWidget.py  PainterUtils.py  PlayerGridWidget.py  TableWidget.py  common.py  main.py
