[tool.poetry]
name = "learn_qt_move"
version = "0.1.0"
description = "Project for practicing qt gui application moving a player object around an area"
authors = ["BTozier <BenjaminATozier@gmail.com>"]
readme = "README.md"
packages = [{include = "learn_qt_move"}] 

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyqt6 = ">=6.6.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.0"
pytest-mock = ">=3.11.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
